fix: update SshConnectionServiceFactory for thread safety and logging improvements
Changes:
1. Made the instance variable of SshConnectionServiceFactory volatile to ensure safe publication in a multi-threaded environment.
2. Refactored the logic for retrieving the SSH connection service to improve clarity and logging, ensuring that the first extension is fetched correctly and logging warnings when no extensions are found.

This enhances the reliability of the SSH service initialization process.